# FantasyTeamGenerator

./: README.md
backend/lambdas/ingest_fpl/: handler.py
backend/lambdas/optimize_squad/: Dockerfile  app.py  requirements.txt
backend/lambdas/sm_feature_launcher/: handler.py
backend/optimizer/: pyproject.toml
backend/optimizer/src/fpl_opt/: __init__.py  advice.py  captaincy.py  config.py  data_access.py  domain.py  exceptions.py  optimizer.py  positions.py  util.py
