[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fpl-opt"
version = "1.0.0"
description = "AWS-native FPL team selector with ILP, multi-week horizon and captaincy"
authors = [{ name = "Chijioke Ekechi" }]
requires-python = ">=3.12"
dependencies = [
  "pandas==2.2.2",
  "pyarrow==16.1.0",
  "boto3==1.34.162",
  "ortools==9.10.4067",
  "pydantic==2.7.4",
]